# crypto_strangle_auto_delta

./: .env.example  .env.prod.example  .gitignore  README.md  delta_order_place_sample.py  delta_strangle_ai_prompt.md  docker-compose.prod.yml  production_delta_trader.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  configurations.py  deps.py  logs.py  trading.py
backend/app/core/: config.py  database.py  security.py
backend/app/middleware/: request_logging.py
backend/app/models/: __init__.py  config.py  logging.py  trading.py  user.py
backend/app/schemas/: __init__.py  config.py  logging.py  trading.py  user.py
backend/app/services/: __init__.py  analytics_service.py  auth_service.py  config_service.py  delta_exchange_client.py  delta_websocket_client.py  fees_service.py  log_retention_service.py  log_tail_service.py  logging_utils.py  trading_engine.py  trading_service.py
backend/tests/: conftest.py  test_analytics_export.py  test_analytics_history.py  test_auth_api.py  test_backend_log_api.py  test_config_service.py  test_fee_service.py  test_log_ingest.py  test_logging_controls.py  test_trading_api.py  test_trading_engine.py  test_trading_service.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: DEVELOPER_GUIDE.md  backend-delta-debug-plan.md  deployment.md  enhancements.md  live-control-enhancement-plan.md  logging-enhancement-plan.md  production-deployment-requirements.md  ui-analytics-enhancement-plan.md
frontend/: .env.example  .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  (+4 more)
scripts/: analyze_leg_prices.py  deploy_prod.sh  get_balance.py  migrate_add_option_price_ranges.sh  sell_delta_option.py  start_local.sh  test_webhook.py  test_webhook_l1.py
(+38 files in other folders)
